# wordsurf

./: README.md  wordsurf.cabal
src/: Main.hs  Word.hs
