name:                wordsurf
version:             0.2.0.0
synopsis:            GTK speed-reading training application
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Craig Roche
maintainer:          cdxr01@gmail.com
copyright:           Copyright (c) 2013 Craig Roche
category:            Application
build-type:          Simple
cabal-version:       >=1.8

executable wordsurf
  main-is:             Main.hs             
  -- other-modules:       
  build-depends:       base ==4.6.*, mtl ==2.1.*, text ==0.11.*, gtk ==0.12.*, transformers ==0.3.*, lens ==3.9.*, async ==2.0.*, stm ==2.4.*
  hs-source-dirs:      src
